--- a/index.html
+++ b/index.html
@@ -267,129 +267,117 @@
         <h2>Текст договора</h2>
 
         <p>
-          Настоящий документ представляет собой договор публичной оферты на оказание информационно-риелторских услуг
-          по подбору вариантов аренды жилой недвижимости (далее – «Договор»). Исполнитель, действующий на основании
-          свидетельства о регистрации (далее – «Исполнитель»), обращается с данным предложением к любому лицу,
-          готовому принять условия Договора (далее – «Заказчик»).
+          Этот документ — публичное предложение сервиса «HOME» (далее — Исполнитель) заключить договор
+          на оказание информационно-риелторских услуг по поиску квартир в аренду (далее — Договор).
+          Любой человек, кто оплачивает услуги Исполнителя, считается принявшим условия Договора без оговорок
+          и возражений (далее — Заказчик).
         </p>
         <p>
-          Оплата услуг Исполнителя считается полным и безусловным принятием всех условий Договора.
-          С момента поступления оплаты на реквизиты Исполнителя между Сторонами считается заключённым договор
-          на условиях, изложенных ниже.
-        </p>
-
-        <p class="contract-section-title">1. Предмет договора</p>
-        <p>
-          1.1. Исполнитель оказывает Заказчику информационно-риелторские услуги по поиску квартир для аренды
-          в пределах города Бишкек с использованием собственных каналов и источников информации.
-        </p>
-        <p>
-          1.2. В рамках оказания услуг Исполнитель предоставляет Заказчику доступ к специализированной группе
-          в мессенджере Telegram, содержащей объявления и сведения об объектах жилой недвижимости
-          (далее – «Объекты»), а также публикует в этой группе подходящие варианты Объектов.
-        </p>
-        <p>
-          1.3. После получения информации в группе Заказчик самостоятельно инициирует контакт с арендодателем
-          (собственником Объекта либо его представителем), договаривается о просмотре, обсуждает условия аренды
-          и заключает договор аренды напрямую, без участия Исполнителя.
+          Момент поступления оплаты на реквизиты Исполнителя считается моментом заключения Договора
+          между Исполнителем и Заказчиком.
         </p>
 
-        <p class="contract-section-title">2. Условия оплаты</p>
+        <p class="contract-section-title">1. Что делает сервис</p>
         <p>
-          2.1. Оплата производится в национальной валюте Кыргызской Республики – сомах – путём перечисления
-          денежных средств на реквизиты Исполнителя, указанные на сайте или предоставленные иным способом.
-          Момент оплаты считается моментом принятия Заказчиком условий настоящего Договора.
+          1.1. Исполнитель подбирает для Заказчика варианты аренды квартир в городе Бишкек, используя свои
+          каналы и источники информации.
         </p>
         <p>
-          2.2. Стоимость услуг Исполнителя составляет 1000 (одна тысяча) сом и оплачивается единовременно
-          за предоставление Заказчику бессрочного доступа к группе в Telegram-приложении «HOME»,
-          без установления срока окончания подписки. Доступ может быть прекращён только в случае закрытия сервиса
-          либо удаления Заказчика за нарушение условий Договора.
+          1.2. После оплаты Исполнитель добавляет Заказчика в закрытую группу сервиса «HOME» в Telegram,
+          где публикуются объявления и информация об объектах аренды (далее — Объекты).
         </p>
         <p>
-          2.3. Услуги Исполнителя считаются оказанными надлежащим образом с момента предоставления Заказчику
-          технического доступа к группе «HOME» в Telegram.
+          1.3. Исполнитель размещает в группе объявления с подходящими Объектами, а также может давать
+          общие рекомендации и разъяснения по этим Объектам в переписке.
         </p>
         <p>
-          2.4. Оплата, произведённая Заказчиком, возврату не подлежит при любых обстоятельствах,
-          включая случаи, когда Заказчик не воспользовался размещёнными объявлениями, не заключил договор аренды
-          либо прекратил использование группы по собственной инициативе.
+          1.4. Все дальнейшие действия (звонки, встречи, просмотр квартиры, согласование условий аренды
+          и подписание договора аренды) Заказчик выполняет самостоятельно, напрямую с арендодателем
+          или его представителем. Исполнитель в этих переговорах не участвует и стороной сделки аренды не является.
         </p>
 
-        <p class="contract-section-title">3. Права и обязанности сторон</p>
+        <p class="contract-section-title">2. Оплата и доступ</p>
         <p>
-          3.1. Исполнитель обязуется регулярно осуществлять поиск объявлений об аренде квартир по городу Бишкек
-          через свои источники и размещать найденные варианты Объектов в группе «HOME».
+          2.1. Стоимость услуг Исполнителя составляет 1000 (одна тысяча) сом и оплачивается один раз.
         </p>
         <p>
-          3.2. Исполнитель вправе по запросу Заказчика давать общие разъяснения и комментарии по Объектам,
-          размещённым в группе, в пределах своей компетенции, не вступая при этом в переговоры
-          и не представляя интересы Заказчика перед арендодателями.
+          2.2. За эту сумму Заказчик получает бессрочный доступ к группе «HOME» в Telegram:
+          никаких ежемесячных платежей или продления подписки не требуется. Доступ сохраняется до тех пор,
+          пока существует группа/сервис или пока Заказчик не будет удалён за нарушение условий Договора.
         </p>
         <p>
-          3.3. Заказчик обязуется предоставить при заполнении формы достоверные персональные данные,
-          самостоятельно обеспечить возможность связи по указанному контактному номеру и своевременно
-          отслеживать новые объявления в группе.
+          2.3. Услуга считается оказанной с момента, когда Заказчику фактически предоставлен доступ к группе.
         </p>
         <p>
-          3.4. Заказчику запрещается передавать третьим лицам логин, ссылки, скриншоты и иную информацию,
-          позволяющую этим лицам получать доступ к группе «HOME» либо к объявлениям из группы без согласия Исполнителя.
-        </p>
-        <p>
-          3.5. Заказчик не вправе копировать базу объявлений или систематически распространять сведения
-          об Объектах любым способом (пересылка сообщений, публикация в других каналах, перепродажа доступов
-          и т.п.) без предварительного письменного согласия Исполнителя.
-        </p>
-        <p>
-          3.6. В случае выявления факта передачи третьим лицам информации об Объектах, полученной Заказчиком
-          из группы «HOME», на Заказчика накладывается договорный штраф в размере
-          10 000 (десять тысяч) сом за нарушение условий конфиденциальности и ограничений распространения.
+          2.4. Деньги, перечисленные Исполнителю, не возвращаются ни при каких обстоятельствах,
+          в том числе если Заказчик:
+          не нашёл подходящий вариант, передумал искать жильё, не заселился или перестал пользоваться группой.
         </p>
 
-        <p class="contract-section-title">4. Ограничение ответственности</p>
+        <p class="contract-section-title">3. Обязанности Заказчика</p>
         <p>
-          4.1. Источником информации об Объектах являются третьи лица – собственники недвижимости,
-          их представители и иные лица, размещающие объявления, а также открытые и закрытые интернет-площадки
-          (в том числе сервисы наподобие «Лалафо» и аналогичные ресурсы).
+          3.1. При заполнении формы Заказчик указывает своё настоящее ФИО и актуальный номер телефона,
+          по которому с ним можно связаться.
         </p>
         <p>
-          4.2. Исполнитель передаёт Заказчику сведения об Объектах «как есть» и не несёт ответственности
-          за корректность, полноту, актуальность, юридическую чистоту и соответствие объявлений фактическому состоянию Объекта.
+          3.2. Заказчик регулярно отслеживает новые объявления в группе и самостоятельно выходит на связь
+          с арендодателями по интересующим Объектам.
         </p>
         <p>
-          4.3. Все условия будущей аренды (размер и порядок внесения оплаты, размер залога, сроки проживания,
-          наличие и состояние имущества, документы на Объект и т.д.) Заказчик обязан проверить самостоятельно,
-          непосредственно общаясь с арендодателем до заключения договора аренды.
+          3.3. Заказчик обязуется не передавать третьим лицам:
+          свой доступ к группе, ссылки-приглашения, скриншоты и содержимое объявлений, опубликованных в группе,
+          без согласия Исполнителя.
         </p>
         <p>
-          4.4. Исполнитель не является стороной договора аренды между Заказчиком и арендодателем,
-          не гарантирует заключение сделки и не отвечает за её исход, включая отказ арендодателя заключать договор,
-          изменение им условий, расторжение договора аренды и любые последствия таких действий.
+          3.4. Запрещено перепродавать доступ, пересылать базу объявлений, создавать свои каналы/чаты
+          на основе информации из группы или организовывать платный/бесплатный доступ к ней для других людей.
         </p>
         <p>
-          4.5. Исполнитель не несёт ответственности за действия и бездействие арендодателей и иных третьих лиц,
-          их добросовестность, соблюдение ими договорённостей, а также за возможные убытки Заказчика,
-          возникшие в результате отношений с этими лицами.
+          3.5. Если будет установлено, что Заказчик делится объявлениями или доступом к группе с третьими лицами,
+          на него накладывается договорный штраф в размере 10 000 (десять тысяч) сом.
         </p>
 
-        <p class="contract-section-title">5. Заключительные положения</p>
+        <p class="contract-section-title">4. Источники информации и ответственность</p>
         <p>
-          5.1. Договор начинает действовать с момента поступления оплаты за услуги на счёт Исполнителя
-          и сохраняет силу на весь период, пока Заказчик имеет доступ к группе «HOME» в Telegram.
+          4.1. Объявления и данные об Объектах формируются третьими лицами — собственниками квартир,
+          их представителями, агентами или размещаются на сторонних площадках (например, сервисы объявлений
+          наподобие «Лалафо» и другие сайты).
         </p>
         <p>
-          5.2. Изменения в требованиях Заказчика к искомому Объекту (район, бюджет, количество комнат и т.п.)
-          могут передаваться Исполнителю в устной форме либо любым способом связи, используемым Сторонами,
-          и не требуют заключения отдельного письменного соглашения.
+          4.2. Исполнитель лишь передаёт Заказчику эти объявления и не контролирует:
+          корректность описаний, актуальность цен, наличие документов, состояние квартиры, законность сделки
+          и другие условия, зависящие от арендодателя.
         </p>
         <p>
-          5.3. Любые дополнительные договорённости, достигнутые между Заказчиком и арендодателем,
-          оформляются ими самостоятельно и не создают для Исполнителя каких-либо прав и обязанностей.
+          4.3. Исполнитель не несёт ответственности за то, какие именно объявления публикует арендодатель,
+          какие условия он выдвигает и насколько они соответствуют первоначальной информации в объявлении.
         </p>
         <p>
-          5.4. Применимым правом по настоящему Договору является законодательство Кыргызской Республики.
-          Все возможные разногласия и требования, возникающие в связи с исполнением Договора, подлежат рассмотрению
-          в соответствии с этим законодательством.
+          4.4. Всё, что связано с конкретной квартирой и сделкой аренды
+          (стоимость, залог, сроки, правила проживания, состояние жилья, наличие мебели и техники,
+          коммунальные платежи, документы и т.п.), Заказчик обязан сам уточнить у арендодателя до заключения договора.
+        </p>
+        <p>
+          4.5. Исполнитель не гарантирует, что по результатам подбора Заказчик обязательно снимет жильё
+          или заключит выгодную для себя сделку.
+        </p>
+        <p>
+          4.6. Исполнитель не отвечает за действия и бездействие арендодателей, изменение ими условий,
+          отказ сдавать квартиру, возможный обман или любые иные последствия общения Заказчика с третьими лицами.
+        </p>
+
+        <p class="contract-section-title">5. Прочие условия</p>
+        <p>
+          5.1. Договор начинает действовать с момента оплаты услуг и действует всё время,
+          пока Заказчику предоставлен доступ к группе «HOME».
+        </p>
+        <p>
+          5.2. Если в процессе поиска жилья меняются требования Заказчика (район, бюджет, количество комнат и т.д.),
+          он может сообщить об этом Исполнителю любым удобным способом связи, без оформления отдельного письменного соглашения.
+        </p>
+        <p>
+          5.3. Все отношения между Сторонами регулируются законодательством Кыргызской Республики.
+          Во всём, что прямо не прописано в тексте Договора, Стороны руководствуются нормами действующего закона.
         </p>
       </section>
 
