--- a/index.html
+++ b/index.html
@@ -267,117 +267,123 @@
         <h2>Текст договора</h2>
 
         <p>
-          Этот документ — публичное предложение сервиса «HOME» (далее — Исполнитель) заключить договор
-          на оказание информационно-риелторских услуг по поиску квартир в аренду (далее — Договор).
-          Любой человек, кто оплачивает услуги Исполнителя, считается принявшим условия Договора без оговорок
-          и возражений (далее — Заказчик).
+          Сервис «HOME» (далее — Исполнитель) предлагает любому заинтересованному лицу заключить договор
+          на условиях, указанных ниже. Настоящий текст является публичной офертой.
+          Лицо, которое оплачивает услуги, далее именуется Заказчиком.
         </p>
         <p>
-          Момент поступления оплаты на реквизиты Исполнителя считается моментом заключения Договора
-          между Исполнителем и Заказчиком.
-        </p>
-
-        <p class="contract-section-title">1. Что делает сервис</p>
-        <p>
-          1.1. Исполнитель подбирает для Заказчика варианты аренды квартир в городе Бишкек, используя свои
-          каналы и источники информации.
-        </p>
-        <p>
-          1.2. После оплаты Исполнитель добавляет Заказчика в закрытую группу сервиса «HOME» в Telegram,
-          где публикуются объявления и информация об объектах аренды (далее — Объекты).
-        </p>
-        <p>
-          1.3. Исполнитель размещает в группе объявления с подходящими Объектами, а также может давать
-          общие рекомендации и разъяснения по этим Объектам в переписке.
-        </p>
-        <p>
-          1.4. Все дальнейшие действия (звонки, встречи, просмотр квартиры, согласование условий аренды
-          и подписание договора аренды) Заказчик выполняет самостоятельно, напрямую с арендодателем
-          или его представителем. Исполнитель в этих переговорах не участвует и стороной сделки аренды не является.
+          Как только оплата поступила на реквизиты Исполнителя, считается, что Заказчик принял все условия
+          Договора и между Сторонами возникли договорные отношения.
         </p>
 
-        <p class="contract-section-title">2. Оплата и доступ</p>
+        <p class="contract-section-title">1. Описание сервиса</p>
         <p>
-          2.1. Стоимость услуг Исполнителя составляет 1000 (одна тысяча) сом и оплачивается один раз.
+          1.1. Исполнитель предоставляет Заказчику информационный сервис по поиску вариантов аренды квартир
+          на территории города Бишкек. Исполнитель не сдает квартиры сам и не выступает арендодателем.
         </p>
         <p>
-          2.2. За эту сумму Заказчик получает бессрочный доступ к группе «HOME» в Telegram:
-          никаких ежемесячных платежей или продления подписки не требуется. Доступ сохраняется до тех пор,
-          пока существует группа/сервис или пока Заказчик не будет удалён за нарушение условий Договора.
+          1.2. После оплаты Заказчик добавляется в закрытую Telegram-группу «HOME», в которой публикуются
+          объявления об аренде квартир и краткая информация по объектам (далее — Объекты).
         </p>
         <p>
-          2.3. Услуга считается оказанной с момента, когда Заказчику фактически предоставлен доступ к группе.
+          1.3. Источниками объявлений являются:
+          собственники квартир, их представители, риелторы, а также сторонние онлайн-площадки
+          (в том числе, но не ограничиваясь сервисами объявлений наподобие «Лалафо») и другие открытые
+          и закрытые ресурсы.
         </p>
         <p>
-          2.4. Деньги, перечисленные Исполнителю, не возвращаются ни при каких обстоятельствах,
-          в том числе если Заказчик:
-          не нашёл подходящий вариант, передумал искать жильё, не заселился или перестал пользоваться группой.
-        </p>
-
-        <p class="contract-section-title">3. Обязанности Заказчика</p>
-        <p>
-          3.1. При заполнении формы Заказчик указывает своё настоящее ФИО и актуальный номер телефона,
-          по которому с ним можно связаться.
-        </p>
-        <p>
-          3.2. Заказчик регулярно отслеживает новые объявления в группе и самостоятельно выходит на связь
-          с арендодателями по интересующим Объектам.
-        </p>
-        <p>
-          3.3. Заказчик обязуется не передавать третьим лицам:
-          свой доступ к группе, ссылки-приглашения, скриншоты и содержимое объявлений, опубликованных в группе,
-          без согласия Исполнителя.
-        </p>
-        <p>
-          3.4. Запрещено перепродавать доступ, пересылать базу объявлений, создавать свои каналы/чаты
-          на основе информации из группы или организовывать платный/бесплатный доступ к ней для других людей.
-        </p>
-        <p>
-          3.5. Если будет установлено, что Заказчик делится объявлениями или доступом к группе с третьими лицами,
-          на него накладывается договорный штраф в размере 10 000 (десять тысяч) сом.
+          1.4. Исполнитель систематизирует и передаёт Заказчику объявления в удобном виде в рамках группы
+          «HOME», но не участвует в переговорах, показах квартир и подписании договоров аренды.
         </p>
 
-        <p class="contract-section-title">4. Источники информации и ответственность</p>
+        <p class="contract-section-title">2. Подключение и оплата</p>
         <p>
-          4.1. Объявления и данные об Объектах формируются третьими лицами — собственниками квартир,
-          их представителями, агентами или размещаются на сторонних площадках (например, сервисы объявлений
-          наподобие «Лалафо» и другие сайты).
+          2.1. Стоимость подключения к сервису «HOME» составляет 1000 (одна тысяча) сом.
+          Оплата производится один раз и не является ежемесячной подпиской.
         </p>
         <p>
-          4.2. Исполнитель лишь передаёт Заказчику эти объявления и не контролирует:
-          корректность описаний, актуальность цен, наличие документов, состояние квартиры, законность сделки
-          и другие условия, зависящие от арендодателя.
+          2.2. За указанную сумму Заказчику предоставляется бессрочный доступ к Telegram-группе «HOME»:
+          никакого продления, «месячных пакетов» и повторных платежей не требуется.
+          Доступ сохраняется, пока существует сервис и группа, либо пока Заказчик не будет удалён
+          за нарушение настоящих условий.
         </p>
         <p>
-          4.3. Исполнитель не несёт ответственности за то, какие именно объявления публикует арендодатель,
-          какие условия он выдвигает и насколько они соответствуют первоначальной информации в объявлении.
+          2.3. Услуга считается полностью оказанной в момент фактического предоставления доступа
+          к группе «HOME» в Telegram.
         </p>
         <p>
-          4.4. Всё, что связано с конкретной квартирой и сделкой аренды
-          (стоимость, залог, сроки, правила проживания, состояние жилья, наличие мебели и техники,
-          коммунальные платежи, документы и т.п.), Заказчик обязан сам уточнить у арендодателя до заключения договора.
-        </p>
-        <p>
-          4.5. Исполнитель не гарантирует, что по результатам подбора Заказчик обязательно снимет жильё
-          или заключит выгодную для себя сделку.
-        </p>
-        <p>
-          4.6. Исполнитель не отвечает за действия и бездействие арендодателей, изменение ими условий,
-          отказ сдавать квартиру, возможный обман или любые иные последствия общения Заказчика с третьими лицами.
+          2.4. Денежные средства, уплаченные Заказчиком, возврату не подлежат, независимо от того,
+          нашёл ли он жильё, воспользовался ли объявлениями, изменил свои планы или перестал
+          пользоваться группой по любой причине.
         </p>
 
-        <p class="contract-section-title">5. Прочие условия</p>
+        <p class="contract-section-title">3. Использование информации и ограничения</p>
         <p>
-          5.1. Договор начинает действовать с момента оплаты услуг и действует всё время,
-          пока Заказчику предоставлен доступ к группе «HOME».
+          3.1. Заказчик использует информацию из группы по своему усмотрению:
+          отслеживает новые объявления, связывается с арендодателями, договаривается о просмотре квартир
+          и обсуждает условия аренды.
         </p>
         <p>
-          5.2. Если в процессе поиска жилья меняются требования Заказчика (район, бюджет, количество комнат и т.д.),
-          он может сообщить об этом Исполнителю любым удобным способом связи, без оформления отдельного письменного соглашения.
+          3.2. Заказчик обязуется сохранить конфиденциальность информации, размещаемой в группе «HOME»,
+          и не передавать:
+          доступ в группу, приглашения, скриншоты, копии базы объявлений и другие материалы третьим лицам.
         </p>
         <p>
-          5.3. Все отношения между Сторонами регулируются законодательством Кыргызской Республики.
-          Во всём, что прямо не прописано в тексте Договора, Стороны руководствуются нормами действующего закона.
+          3.3. Запрещается создавать на основе информации из группы собственные каналы, чаты, боты,
+          платные или бесплатные рассылки, а также перепродавать или дарить доступ к базе объявлений
+          без письменного согласия Исполнителя.
+        </p>
+        <p>
+          3.4. В случае, если выяснится, что Заказчик передаёт объявления или доступ к группе «HOME»
+          другим лицам, на него накладывается договорный штраф в размере
+          10&nbsp;000 (десять тысяч) сом.
+        </p>
+
+        <p class="contract-section-title">4. Ответственность и проверки</p>
+        <p>
+          4.1. Объявления формируются третьими лицами. Исполнитель не создаёт их содержание,
+          а только передаёт Заказчику в виде подбора. 
+        </p>
+        <p>
+          4.2. Исполнитель не может и не обязан проверять каждое объявление на точность и актуальность.
+          В частности, Исполнитель не отвечает за:
+          реальные цены и условия аренды, состояние квартиры, наличие мебели и техники,
+          юридическую чистоту документов, законность сдачи жилья, а также за любые изменения,
+          которые вносит арендодатель.
+        </p>
+        <p>
+          4.3. Исполнитель не несёт ответственности за то, какие объявления публикуют арендодатели,
+          какую информацию они указывают и насколько она совпадает с фактическим состоянием Объекта.
+        </p>
+        <p>
+          4.4. Все детали конкретной сделки — стоимость, залог, сроки проживания, правила дома,
+          коммунальные платежи, документы, состояние квартиры — Заказчик обязан проверить лично,
+          напрямую общаясь с арендодателем до подписания договора аренды.
+        </p>
+        <p>
+          4.5. Исполнитель не гарантирует, что Заказчик в итоге найдёт квартиру или заключит
+          выгодный для себя договор. Итоговый результат зависит только от отношений Заказчика
+          с конкретными арендодателями.
+        </p>
+        <p>
+          4.6. Исполнитель не является стороной договора аренды и не отвечает за действия или бездействие
+          арендодателей, их обещания, отмену договорённостей, отказ сдавать квартиру, изменение условий,
+          возможный обман и любые последствия общения Заказчика с третьими лицами.
+        </p>
+
+        <p class="contract-section-title">5. Заключительные положения</p>
+        <p>
+          5.1. Договор действует с момента оплаты услуг и до тех пор, пока Заказчику предоставлен доступ
+          к группе «HOME» в Telegram.
+        </p>
+        <p>
+          5.2. Если в процессе поиска у Заказчика меняются параметры желаемой квартиры
+          (бюджет, район, количество комнат и т.д.), он может сообщить об этом Исполнителю любым
+          рабочим способом связи, без отдельного подписания дополнительных соглашений.
+        </p>
+        <p>
+          5.3. Ко всем отношениям между Исполнителем и Заказчиком применяется законодательство
+          Кыргызской Республики.
         </p>
       </section>
 
