--- a/index.html
+++ b/index.html
@@ -267,123 +267,123 @@
         <h2>Текст договора</h2>
 
         <p>
-          Сервис «HOME» (далее — Исполнитель) предлагает любому заинтересованному лицу заключить договор
-          на условиях, указанных ниже. Настоящий текст является публичной офертой.
-          Лицо, которое оплачивает услуги, далее именуется Заказчиком.
+          Сервис «HOME» (далее — Исполнитель) предлагает неограниченному кругу лиц заключить договор
+          на условиях, описанных ниже. Настоящий текст является публичной офертой. Лицо, оплатившее услуги
+          Исполнителя, далее именуется Заказчиком.
         </p>
         <p>
-          Как только оплата поступила на реквизиты Исполнителя, считается, что Заказчик принял все условия
-          Договора и между Сторонами возникли договорные отношения.
-        </p>
-
-        <p class="contract-section-title">1. Описание сервиса</p>
-        <p>
-          1.1. Исполнитель предоставляет Заказчику информационный сервис по поиску вариантов аренды квартир
-          на территории города Бишкек. Исполнитель не сдает квартиры сам и не выступает арендодателем.
-        </p>
-        <p>
-          1.2. После оплаты Заказчик добавляется в закрытую Telegram-группу «HOME», в которой публикуются
-          объявления об аренде квартир и краткая информация по объектам (далее — Объекты).
-        </p>
-        <p>
-          1.3. Источниками объявлений являются:
-          собственники квартир, их представители, риелторы, а также сторонние онлайн-площадки
-          (в том числе, но не ограничиваясь сервисами объявлений наподобие «Лалафо») и другие открытые
-          и закрытые ресурсы.
-        </p>
-        <p>
-          1.4. Исполнитель систематизирует и передаёт Заказчику объявления в удобном виде в рамках группы
-          «HOME», но не участвует в переговорах, показах квартир и подписании договоров аренды.
+          Как только деньги поступают на реквизиты Исполнителя, считается, что Заказчик полностью согласился
+          со всеми положениями Договора, и между Сторонами возникает договор на указанных условиях.
         </p>
 
-        <p class="contract-section-title">2. Подключение и оплата</p>
+        <p class="contract-section-title">1. Что делает Исполнитель</p>
         <p>
-          2.1. Стоимость подключения к сервису «HOME» составляет 1000 (одна тысяча) сом.
-          Оплата производится один раз и не является ежемесячной подпиской.
+          1.1. Исполнитель предоставляет Заказчику информационные услуги: подбирает варианты аренды квартир
+          в городе Бишкек и передаёт Заказчику объявления об этих объектах через закрытый канал связи.
         </p>
         <p>
-          2.2. За указанную сумму Заказчику предоставляется бессрочный доступ к Telegram-группе «HOME»:
-          никакого продления, «месячных пакетов» и повторных платежей не требуется.
-          Доступ сохраняется, пока существует сервис и группа, либо пока Заказчик не будет удалён
-          за нарушение настоящих условий.
+          1.2. После оплаты Исполнитель подключает Заказчика к закрытой группе «HOME» в мессенджере Telegram.
+          В этой группе публикуются объявления об аренде квартир и краткое описание доступных вариантов
+          (далее — Объекты).
         </p>
         <p>
-          2.3. Услуга считается полностью оказанной в момент фактического предоставления доступа
-          к группе «HOME» в Telegram.
+          1.3. Источниками объявлений являются третьи лица: собственники недвижимости, их представители,
+          риелторы, а также сторонние интернет-площадки (например, сервисы объявлений наподобие «Лалафо»)
+          и другие ресурсы. Исполнитель сам объекты не сдаёт и арендодателем не является.
         </p>
         <p>
-          2.4. Денежные средства, уплаченные Заказчиком, возврату не подлежат, независимо от того,
-          нашёл ли он жильё, воспользовался ли объявлениями, изменил свои планы или перестал
-          пользоваться группой по любой причине.
-        </p>
-
-        <p class="contract-section-title">3. Использование информации и ограничения</p>
-        <p>
-          3.1. Заказчик использует информацию из группы по своему усмотрению:
-          отслеживает новые объявления, связывается с арендодателями, договаривается о просмотре квартир
-          и обсуждает условия аренды.
-        </p>
-        <p>
-          3.2. Заказчик обязуется сохранить конфиденциальность информации, размещаемой в группе «HOME»,
-          и не передавать:
-          доступ в группу, приглашения, скриншоты, копии базы объявлений и другие материалы третьим лицам.
-        </p>
-        <p>
-          3.3. Запрещается создавать на основе информации из группы собственные каналы, чаты, боты,
-          платные или бесплатные рассылки, а также перепродавать или дарить доступ к базе объявлений
-          без письменного согласия Исполнителя.
-        </p>
-        <p>
-          3.4. В случае, если выяснится, что Заказчик передаёт объявления или доступ к группе «HOME»
-          другим лицам, на него накладывается договорный штраф в размере
-          10&nbsp;000 (десять тысяч) сом.
+          1.4. Исполнитель ограничивается передачей информации и не участвует от имени Заказчика в переговорах,
+          показах квартир, согласовании условий аренды или подписании договоров аренды.
+          Все эти действия Заказчик выполняет самостоятельно.
         </p>
 
-        <p class="contract-section-title">4. Ответственность и проверки</p>
+        <p class="contract-section-title">2. Оплата и доступ</p>
         <p>
-          4.1. Объявления формируются третьими лицами. Исполнитель не создаёт их содержание,
-          а только передаёт Заказчику в виде подбора. 
+          2.1. Стоимость подключения к сервису «HOME» составляет 1000 (одна тысяча) сом и вносится однократно.
         </p>
         <p>
-          4.2. Исполнитель не может и не обязан проверять каждое объявление на точность и актуальность.
-          В частности, Исполнитель не отвечает за:
-          реальные цены и условия аренды, состояние квартиры, наличие мебели и техники,
-          юридическую чистоту документов, законность сдачи жилья, а также за любые изменения,
-          которые вносит арендодатель.
+          2.2. За один платёж Заказчик получает бессрочный доступ к группе «HOME» в Telegram.
+          Повторные ежемесячные платежи или продление подписки не требуются.
+          Доступ действует до тех пор, пока работает сервис и существует группа, либо пока Заказчик
+          не будет исключён за нарушение условий Договора.
         </p>
         <p>
-          4.3. Исполнитель не несёт ответственности за то, какие объявления публикуют арендодатели,
-          какую информацию они указывают и насколько она совпадает с фактическим состоянием Объекта.
+          2.3. Услуга считается оказанной с момента фактического предоставления Заказчику доступа к группе «HOME».
         </p>
         <p>
-          4.4. Все детали конкретной сделки — стоимость, залог, сроки проживания, правила дома,
-          коммунальные платежи, документы, состояние квартиры — Заказчик обязан проверить лично,
-          напрямую общаясь с арендодателем до подписания договора аренды.
-        </p>
-        <p>
-          4.5. Исполнитель не гарантирует, что Заказчик в итоге найдёт квартиру или заключит
-          выгодный для себя договор. Итоговый результат зависит только от отношений Заказчика
-          с конкретными арендодателями.
-        </p>
-        <p>
-          4.6. Исполнитель не является стороной договора аренды и не отвечает за действия или бездействие
-          арендодателей, их обещания, отмену договорённостей, отказ сдавать квартиру, изменение условий,
-          возможный обман и любые последствия общения Заказчика с третьими лицами.
+          2.4. Выплаченные Заказчиком деньги возврату не подлежат при любых обстоятельствах, в том числе если:
+          Заказчик не нашёл подходящий вариант, передумал снимать жильё, не заселился или перестал пользоваться
+          группой по личным причинам.
         </p>
 
-        <p class="contract-section-title">5. Заключительные положения</p>
+        <p class="contract-section-title">3. Обязанности Заказчика и ограничения</p>
         <p>
-          5.1. Договор действует с момента оплаты услуг и до тех пор, пока Заказчику предоставлен доступ
-          к группе «HOME» в Telegram.
+          3.1. При заполнении формы на сайте Заказчик указывает достоверные ФИО и актуальный номер телефона,
+          по которому с ним можно оперативно связаться.
         </p>
         <p>
-          5.2. Если в процессе поиска у Заказчика меняются параметры желаемой квартиры
-          (бюджет, район, количество комнат и т.д.), он может сообщить об этом Исполнителю любым
-          рабочим способом связи, без отдельного подписания дополнительных соглашений.
+          3.2. Заказчик самостоятельно отслеживает объявления в группе, связывается с арендодателями,
+          договаривается о просмотре квартир и обсуждает условия аренды напрямую с ними.
         </p>
         <p>
-          5.3. Ко всем отношениям между Исполнителем и Заказчиком применяется законодательство
-          Кыргызской Республики.
+          3.3. Заказчику запрещается передавать третьим лицам:
+          свой доступ к группе, приглашения, ссылки, скриншоты, выгруженную базу объявлений и другие материалы,
+          полученные в рамках сервиса «HOME», без согласия Исполнителя.
+        </p>
+        <p>
+          3.4. Запрещается строить на основе информации из группы собственный бизнес или сервис:
+          создавать каналы, чаты, рассылки, базы данных, продавать или бесплатно раздавать другим людям информацию
+          из группы «HOME».
+        </p>
+        <p>
+          3.5. Если будет установлено, что Заказчик передаёт объявления или доступ к группе третьим лицам,
+          на него накладывается договорный штраф в размере 10&nbsp;000 (десять тысяч) сом.
+        </p>
+
+        <p class="contract-section-title">4. Информация, объявления и ответственность</p>
+        <p>
+          4.1. Объявления формируются третьими лицами. Именно они указывают цены, условия аренды,
+          характеристики квартир и другую информацию. Исполнитель эту информацию не создаёт и не контролирует.
+        </p>
+        <p>
+          4.2. Исполнитель не несёт ответственности за содержание объявлений, их достоверность,
+          актуальность, полноту, корректность, а также за то, насколько описание квартиры в объявлении
+          совпадает с фактическим состоянием Объекта.
+        </p>
+        <p>
+          4.3. Исполнитель не отвечает за то, какие именно объявления публикуют арендодатели,
+          какие условия они выставляют, что обещают и как меняют свои условия со временем.
+        </p>
+        <p>
+          4.4. Все детали конкретной сделки — стоимость аренды и залога, сроки проживания, правила,
+          коммунальные платежи, состояние квартиры, наличие мебели и техники, документы на недвижимость
+          и любые другие нюансы — Заказчик обязан уточнить напрямую у арендодателя до заключения договора.
+        </p>
+        <p>
+          4.5. Исполнитель не гарантирует, что Заказчик в итоге снимет жильё, найдёт «идеальный» вариант
+          или заключит выгодный для себя договор. Результат полностью зависит от договорённостей
+          между Заказчиком и конкретными арендодателями.
+        </p>
+        <p>
+          4.6. Исполнитель не является стороной договора аренды и не несёт ответственности за действия
+          или бездействие арендодателей, их отказ сдавать квартиру, изменение условий, нарушение обещаний,
+          возможный обман, а также за любые последствия, связанные с общением Заказчика с третьими лицами.
+        </p>
+
+        <p class="contract-section-title">5. Заключительные условия</p>
+        <p>
+          5.1. Договор начинает действовать с момента оплаты услуг и продолжает действовать
+          весь период, пока Заказчику предоставлен доступ к группе «HOME».
+        </p>
+        <p>
+          5.2. Если требования Заказчика к жилью меняются (район, бюджет, метраж, количество комнат и т.п.),
+          он может сообщить об этом Исполнителю через доступные каналы связи. Для этого не требуется
+          отдельное письменное соглашение.
+        </p>
+        <p>
+          5.3. На все отношения между Исполнителем и Заказчиком распространяется законодательство
+          Кыргызской Республики. Во всём, что прямо не урегулировано текстом Договора, Стороны руководствуются
+          нормами действующего законодательства.
         </p>
       </section>
 
