--- a/index.html
+++ b/index.html
@@ -381,9 +381,8 @@
           отдельное письменное соглашение.
         </p>
         <p>
-          5.3. На все отношения между Исполнителем и Заказчиком распространяется законодательство
-          Кыргызской Республики. Во всём, что прямо не урегулировано текстом Договора, Стороны руководствуются
-          нормами действующего законодательства.
+          5.3. Во всех ситуациях, не описанных прямо в тексте настоящего Договора, Стороны исходят
+          из здравого смысла, деловой практики и своих взаимных договорённостей.
         </p>
       </section>
 
