--- a/index.html
+++ b/index.html
@@ -301,21 +301,26 @@
 
         <p class="contract-section-title">2. Оплата и доступ</p>
         <p>
-          2.1. Стоимость подключения к сервису «HOME» составляет 1000 (одна тысяча) сом и вносится однократно.
+          2.1. Общая стоимость подключения к сервису «HOME» составляет 1500 (полторы тысячи) сом
+          и делится на две части по схеме 50/50.
         </p>
         <p>
-          2.2. За один платёж Заказчик получает бессрочный доступ к группе «HOME» в Telegram.
-          Повторные ежемесячные платежи или продление подписки не требуются.
-          Доступ действует до тех пор, пока работает сервис и существует группа, либо пока Заказчик
-          не будет исключён за нарушение условий Договора.
+          2.2. Первая часть оплаты в размере 750 (семьсот пятьдесят) сом перечисляется до вступления
+          Заказчика в группу. После поступления этой суммы Исполнитель предоставляет доступ к закрытой
+          группе «HOME» и фиксирует факт начала оказания услуг. Первая часть оплаты не возвращается.
         </p>
         <p>
-          2.3. Услуга считается оказанной с момента фактического предоставления Заказчику доступа к группе «HOME».
+          2.3. Вторая часть оплаты в размере 750 (семьсот пятьдесят) сом перечисляется после того,
+          как Заказчик нашёл через сервис «HOME» варианты жилья и фактически заселился (заключил договор
+          аренды и въехал в квартиру). Вторая часть оплаты также не возвращается.
         </p>
         <p>
-          2.4. Выплаченные Заказчиком деньги возврату не подлежат при любых обстоятельствах, в том числе если:
-          Заказчик не нашёл подходящий вариант, передумал снимать жильё, не заселился или перестал пользоваться
-          группой по личным причинам.
+          2.4. Доступ к группе «HOME» предоставляется на бессрочной основе. Повторные ежемесячные платежи
+          или продление подписки не требуются, при условии соблюдения Заказчиком настоящих условий.
+        </p>
+        <p>
+          2.5. После каждой оплаты Заказчик сохраняет чек или иное подтверждение перевода и по запросу
+          Исполнителя предоставляет его, в том числе прикрепляя файл через форму на сайте.
         </p>
 
         <p class="contract-section-title">3. Обязанности Заказчика и ограничения</p>
@@ -374,7 +379,7 @@
 
         <p class="contract-section-title">5. Заключительные условия</p>
         <p>
-          5.1. Договор начинает действовать с момента оплаты услуг и продолжает действовать
+          5.1. Договор начинает действовать с момента первой оплаты услуг и продолжает действовать
           весь период, пока Заказчику предоставлен доступ к группе «HOME».
         </p>
         <p>
@@ -416,7 +421,7 @@
 
             <!-- ЧЕК ОПЛАТЫ -->
             <div class="field">
-              <label for="receipt">Чек об оплате услуги</label>
+              <label for="receipt">Чек об оплате первой части (750 сом)</label>
               <input
                 id="receipt"
                 name="receipt"
@@ -424,7 +429,7 @@
                 accept="image/*,application/pdf"
                 required
               >
-              <small>Приложите скриншот или файл с подтверждением оплаты. Без чека договор не может быть подписан.</small>
+              <small>Приложите скриншот или файл с подтверждением первой оплаты 750 сом. Без чека договор не может быть подписан.</small>
             </div>
 
             <div class="checkbox-row">
