--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
 
         <p class="contract-section-title">2. Оплата и доступ</p>
         <p>
-          2.1. Общая стоимость подключения к сервису «HOME» составляет 1500 (полторы тысячи) сом
-          и делится на две части по схеме 50/50.
+          2.1. Общая стоимость подключения к сервису «HOME» составляет 1000 (одна тысяча) сом
+          и делится на две части: 750 сом до вступления и 250 сом после заселения.
         </p>
         <p>
           2.2. Первая часть оплаты в размере 750 (семьсот пятьдесят) сом перечисляется до вступления
@@ -310,7 +310,7 @@
           группе «HOME» и фиксирует факт начала оказания услуг. Первая часть оплаты не возвращается.
         </p>
         <p>
-          2.3. Вторая часть оплаты в размере 750 (семьсот пятьдесят) сом перечисляется после того,
+          2.3. Вторая часть оплаты в размере 250 (двести пятьдесят) сом перечисляется после того,
           как Заказчик нашёл через сервис «HOME» варианты жилья и фактически заселился (заключил договор
           аренды и въехал в квартиру). Вторая часть оплаты также не возвращается.
         </p>
